readme : step by step

--- a/README.org
+++ b/README.org
@@ -60,16 +60,25 @@ style.
 
 ** First circles
 
-Let’s say we have the files =juice=, =tea=, =coffe=. The first thing
+Let’s say we have the files =Juice=, =Tea=, =Coffe=. The first thing
 to do is to create a group (a circle) which will contain them. So, we
 launch ~torus-add-circle~ and answer =Drinks= to the prompt. Then, we
-go to =juice= and use ~torus-add-location~ to add it to the circle.
-Same process with =tea= and =coffee=. We now have a circle =Drink=
+go to =Juice= and use ~torus-add-location~ to add it to the circle.
+Same process with =Tea= and =Coffee=. We now have a circle =Drink=
 containing three files.
 
 If you want to create another circle, let’s say =Fruits=, simply
 launch ~torus-add-circle~ again, and enter another name. You can then
-add the files =Apple=, =Pear= and =Orange= to it.
+add the files =Apple=, =Pear= and =Orange= to it. You can even also
+add =Juice=, a file can be added to more than one circle.
+
+Now, suppose that in the =Juice= file, you have a Pineapple juice and
+a Mango juices sections, and you want to compare them. Just go to the
+Pineapple section, use ~torus-add-location~. It will add the location
+(=Juice= . =pineapple-position=) to the current circle. Then, go to
+the Mango section, and do the same. The (=Juice= . =mango-position=)
+will also be added to the circle. You can then easily alternate both,
+or display them in split windows.
 
 
 ** Moving around
