--- a/README.org
+++ b/README.org
@@ -7,7 +7,8 @@ If you ever dreamed about creating and switching buffer groups at will
 in emacs, [[https://github.com/chimay/torus][Torus]] is the tool you want.
 
 In short, this plugin let you organize your buffers by creating as
-many buffer groups as you need, and quickly navigate between :
+many buffer groups as you need, add the buffers you want to it and
+quickly navigate between :
 
   - Buffers of the same group
 
