--- a/README.org
+++ b/README.org
@@ -12,6 +12,7 @@
   - [[#moving-around][Moving around]]
 - [[#features][Features]]
 - [[#key-bindings][Key Bindings]]
+  - [[#levels][Levels]]
   - [[#list-of-bindings][List of bindings]]
   - [[#shortcuts][Shortcuts]]
 - [[#configuration][Configuration]]
@@ -181,6 +182,22 @@ default. You can see them by pressing <super-t><C-h>, or by installing
 #+end_src
 
 
+** Levels
+
+The option ~torus-binding-level~ decide how many functions will be
+bound to keys :
+
+  - Level 0 : adding, deleting, moving around, save and load
+
+  - Level 1 : history, renaming, moving and copying things, joining
+
+  - Level 2 : reverse, save and load ~torus-meta~
+
+  - Level 3 : you surely don’t want to use these
+
+Level 1 or 2 is fine for most usages.
+
+
 ** List of bindings
 
 Enter the prefix key, then
@@ -307,7 +324,7 @@ Here is a sample configuration :
 
   ;; Range 0 -> 3
   ;; The bigger it is, the more bindings.
-  (setq torus-optional-bindings 1)
+  (setq torus-binding-level 1)
 
   ;; Created if non existent
   (setq torus-dirname "~/.emacs.d/torus/")
