--- a/README.org
+++ b/README.org
@@ -251,9 +251,10 @@ Enter the prefix key, then
 
 *** Torus operations
 
-A list of toruses is available : you can create a new torus manually,
-as a copy of the current torus, or by loading a torus file. Some
-actions, like regrouping, also create new toruses.
+You can create new toruses, beginning with a copy of the current
+torus, and switch easily between them. A list of toruses, called Meta
+Torus, is available. Some actions, like joining or regrouping, also
+create new toruses.
 
   - =+= : add a new torus to the torus list (variable ~torus-meta~)
 
@@ -266,11 +267,11 @@ actions, like regrouping, also create new toruses.
 
   - =g= : regroup files in a new torus
 
-    + =p= : by path
+    + =p= : group files by path
 
-    + =d= : by directories
+    + =d= : group files by directories
 
-    + =e= : by extensions
+    + =e= : group files by extensions
 
   - =-= : delete a torus
 
