--- a/README.org
+++ b/README.org
@@ -17,7 +17,7 @@
   - [[#list-of-bindings][List of bindings]]
   - [[#shortcuts][Shortcuts]]
 - [[#configuration][Configuration]]
-  - [[#with-use-package][With ~use-package~]]
+  - [[#use-package][Use-package]]
 - [[#warning][Warning]]
 
 * Introduction
@@ -393,7 +393,7 @@ Here is a sample configuration :
 #+end_src
 
 
-** With ~use-package~
+** Use-package
 
 If you declare Torus with ~use-package~ and want the start/quit hooks
 to load/save your torus file, you’ll have to add a ~:hook~ section to
