--- a/README.org
+++ b/README.org
@@ -382,12 +382,12 @@ Here is a sample configuration :
   (setq torus-autoread-file "~/.emacs.d/torus/last.el")
   (setq torus-autowrite-file torus-autoread-file)
 
-  (setq torus-display-tab-bar t)
-
   (setq torus-history-maximum-elements 30)
 
   (setq torus-maximum-horizontal-split 3)
   (setq torus-maximum-vertical-split 4)
+
+  (setq torus-display-tab-bar t)
 
   (torus-init)
 
@@ -436,11 +436,11 @@ the declaration :
 	     (torus-autoread-file "~/.emacs.d/torus/dernier")
 	     (torus-autowrite-file torus-autoread-file)
 	     (torus-history-maximum-elements 30)
-	     (torus-display-tab-bar t)
 	     (torus-maximum-horizontal-split 3)
 	     (torus-maximum-vertical-split 4)
-	     (torus-prefix-separator " : ")
-	     (torus-join-separator " - "))
+	     (torus-display-tab-bar t)
+	     (torus-prefix-separator "/")
+	     (torus-join-separator " & "))
     :init (torus-init)
     :config (torus-install-default-bindings))
 #+end_src
