--- a/README.org
+++ b/README.org
@@ -455,6 +455,8 @@ the declaration :
 
 * Changelog
 
+  - version 1.9 : backup of torus files
+
   - version 1.8 : tab bar
 
   - version 1.7 : autogroups, layout
