--- a/README.org
+++ b/README.org
@@ -392,7 +392,7 @@ Here is a sample configuration :
   (setq torus-maximum-vertical-split 4)
 
   ;; Format :
-  ;; torus >> circle > file:line | file:line | ...
+  ;; torus >> circle > [ file:line ] | file:line | file:line | ...
   (setq torus-display-tab-bar t)
 
   (torus-init)
