--- a/README.org
+++ b/README.org
@@ -460,6 +460,12 @@ the declaration :
 
 * Changelog
 
+  - to come
+
+    + [X] search in all toruses
+
+    + [ ] bath operations
+
   - version 1.9 : backup of torus files
 
   - version 1.8 : tab bar
